--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,1 @@
 @import url("http://fonts.cdnfonts.com/css/nexa-bold");
-
-body {
-  font-family: "Nexa", sans-serif;
-}
